<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">German Whist</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="action_help">Help</string>
    <string name="help_title">How to Play</string>
    <string name="help_setup">The deck (no jokers) is divided into 4 piles of 13 cards.
        Each player receives one pile as their hand: of the remaining two, one is placed face-up and the other face-down.
        \n\nThe suit of the card on top of the face-up pile is trumps for that game.</string>
    <string name="help_tricks">A \"trick\" consists of both players playing a card.
        First to play in the trick can play any card they wish.
        Second to play must \"follow suit\" if possible - ie, play a card of the same suit.
        \n\nWhoever plays the card with the higher value wins - ace is high, 2 is low.
        \n\nIf the second player can\'t follow suit, they lose unless they play a trumps (in which case,
        they win.)</string>
    <string name="help_gameplay">While the face-up and face-down piles have cards,
        the winner of the trick draws a card from the face-up pile,
        and the loser draws a card from the face-down pile.
        The winner of the trick plays first in the next trick.
        \n\nHence, the first 13 tricks consist of \"hand-building\":
        you want to win or lose the trick depending on the currently face-up card.
        \n\nWhen there are no cards left to draw, winning a trick awards you a point.</string>
    <string name="help_winner">The winner is the player who has the most points at the end of the game,
        when both players have no cards remaining.</string>
    <string name="wins_losses">Statistics</string>
    <string name="menu_new_game">New Game</string>
    <string name="pref_reset">resetStats</string>
    <string name="pref_order">suitOrder</string>>
    <string name="default_suit_order">♦♣♥♠</string>

</resources>
